upd list template

--- a/src/components/info-sheet/info-sheet.html
+++ b/src/components/info-sheet/info-sheet.html
@@ -123,7 +123,7 @@
 
       <span sheet-text>
         <ion-searchbar
-          style="box-shadow: none; padding-top: 0;"
+          style="box-shadow: none; padding-top: 0; background: white;"
           (ionInput)="filterList($event)"
         ></ion-searchbar>
 
